Update netlify.toml to inject Firebase env vars

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,2 @@
 [build]
-  publish = "/"
-  command = "echo \"window.__app_id = ''; window.__firebase_config = ''; window.__initial_auth_token = ''; window.GEMINI_API_KEY = '';\" > env-config.js"
+  command = "echo \"window.__app_id = ''; window.__initial_auth_token = ''; window.GEMINI_API_KEY = '${GEMINI_API_KEY}'; window.__firebase_config = { apiKey: '${FIREBASE_API_KEY}', authDomain: '${FIREBASE_AUTH_DOMAIN}', projectId: '${FIREBASE_PROJECT_ID}', storageBucket: '${FIREBASE_STORAGE_BUCKET}', messagingSenderId: '${FIREBASE_MESSAGING_SENDER_ID}', appId: '${FIREBASE_APP_ID}' };\" > env-config.js"
