--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,10 @@
 [build]
   command = "echo \"window.__app_id = ''; window.__initial_auth_token = ''; window.GEMINI_API_KEY = '${GEMINI_API_KEY}'; window.__firebase_config = { apiKey: '${FIREBASE_API_KEY}', authDomain: '${FIREBASE_AUTH_DOMAIN}', projectId: '${FIREBASE_PROJECT_ID}', storageBucket: '${FIREBASE_STORAGE_BUCKET}', messagingSenderId: '${FIREBASE_MESSAGING_SENDER_ID}', appId: '${FIREBASE_APP_ID}' };\" > env-config.js"
+# netlify.toml
+
+# This section opts out the build process from flagging the public Firebase keys 
+# that are necessarily written to env-config.js
+[build]
+  environment = { 
+    SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
+  }
