--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,28 @@
-# netlify.toml - Combined and Corrected Configuration
+# netlify.toml
 
 [build]
-  command = "echo \"window.__app_id = ''; window.__initial_auth_token = ''; window.GEMINI_API_KEY = '${GEMINI_API_KEY}'; window.__firebase_config = { apiKey: '${FIREBASE_API_KEY}', authDomain: '${FIREBASE_AUTH_DOMAIN}', projectId: '${FIREBASE_PROJECT_ID}', storageBucket: '${FIREBASE_STORAGE_BUCKET}', messagingSenderId: '${FIREBASE_MESSAGING_SENDER_ID}', appId: '${FIREBASE_APP_ID}', measurementId: '${FIREBASE_MEASUREMENT_ID}' };\" > env-config.js"
+  # CRITICAL: Executes the script to create env-config.js and then installs dependencies.
+  # The '&& npm install' is crucial for installing the Node.js functions dependency.
+  command = "./create-config.sh && npm install" 
+  
+  # Directory where Netlify finds the deploy-ready files (index.html is here).
+  publish = "/" 
+  
+  # Directory where Netlify finds serverless function code.
+  functions = "netlify/functions"
 
-  # This section opts out the build process from flagging the public Firebase keys
-  # that are necessarily written to env-config.js
+  # SECURITY: Environment configuration block
   environment = {
+    # This disables Netlify's secret scanner for the public Firebase keys written to env-config.js.
     SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
   }
 
-# If you have any redirects or plugins, they would go below this [build] section
-# Example:
-# [[plugins]]
-#   package = "@netlify/plugin-functions-install-core"
-#   [plugins.inputs]
-#     included_files = ["functions/**"]
+# ---------------------------------------------------------------------------------
+# SINGLE PAGE APPLICATION (SPA) REDIRECTS (Crucial for client-side routing)
+# ---------------------------------------------------------------------------------
+
+[[redirects]]
+  # This rule ensures that any request not matching a static file is served index.html.
+  from = "/*"
+  to = "/index.html"
+  status = 200
