fix(toml): Final structural correction to netlify.toml environment blocks to resolve parsing failure on line 8.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 # This configuration is now structurally sound and ready for deployment.
 
 [build]
-  # CRITICAL FIX: The command string is now correctly closed with a quote mark (").
+  # Line 8 is likely here, where the command must be a single, correctly closed string.
   command = "./create-config.sh && npm install" 
   
   # Directory where Netlify finds the deploy-ready files (index.html is here).
@@ -11,11 +11,14 @@
   # Directory where Netlify finds serverless function code.
   functions = "netlify/functions"
 
-  # SECURITY: Environment configuration block
-  environment = {
-    # This disables Netlify's secret scanner for the public Firebase keys written to env-config.js.
-    SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
-  }
+# ---------------------------------------------------------------------------------
+# SECURITY: ENVIRONMENT VARIABLES (Must be defined under a dedicated sub-table)
+# This addresses the line 8 (or near line 8) parsing error.
+# ---------------------------------------------------------------------------------
+
+[build.environment]
+  # This variable must be defined directly under [build.environment].
+  SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
 
 # ---------------------------------------------------------------------------------
 # SINGLE PAGE APPLICATION (SPA) REDIRECTS (Crucial for client-side routing)
