Ensure netlify.toml with correct build command and publish dir is pushed

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,12 @@
 # netlify.toml
 
 [build]
-  # CRITICAL FIX: Changed build command.
-  # This now ONLY makes your 'create-config.sh' script executable and then runs it.
-  # This script generates env-config.js with your Firebase/Gemini keys.
-  # No 'npm install' or 'npm run build' is needed for the web app's assets.
-  command = "chmod +x create-config.sh && ./create-config.sh"
+  # Combined command to first run the config script,
+  # and THEN copy all necessary static assets to the publish directory (which is '.')
+  command = "chmod +x create-config.sh && ./create-config.sh && cp index.html . && cp app.module.js . && cp create-config.sh ."
   
-  # CRITICAL FIX: Changed publish directory.
-  # All your static assets (index.html, app.module.js, env-config.js)
-  # are now expected to be directly in the root of the repository.
+  # Publish directly from the root of the repository.
+  # This implies index.html, app.module.js, env-config.js, etc., will be here.
   publish = "." 
 
 [[redirects]]
