--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
   "name": "projectsports",
   "version": "1.0.0",
-  "description": "SNTLMO Exclusive Sports Grid web application",
-  "main": "env-config.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-  "build": "bash -c 'echo \"--- DEBUG: Environment Variables before build-env.sh --- \"; echo FIREBASE_API_KEY_VAL=$FIREBASE_API_KEY; echo FIREBASE_PROJECT_ID_VAL=$FIREBASE_PROJECT_ID; echo FIREBASE_STORAGE_BUCKET_VAL=$FIREBASE_STORAGE_BUCKET; echo FIREBASE_MESSAGING_SENDER_ID_VAL=$FIREBASE_MESSAGING_SENDER_ID; echo FIREBASE_APP_ID_VAL=$FIREBASE_APP_ID; echo GEMINI_API_KEY_VAL=$GEMINI_API_KEY; echo \"------------------------------------------------------\"; rm -rf dist; mkdir -p dist; ./build-env.sh; node esbuild.config.js; npm run tailwind:build; cp index.html dist/index.html; cp _redirects dist/_redirects'",
-  "start:dev": "npm run build && firebase emulators:start --only hosting",
-  "tailwind:build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --minify",
-  "tailwind:watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
-
-
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Makaveli1000/weebo-dog.git"
+    "build": "bash -c 'set -e; rm -rf dist; mkdir -p dist; ./build-env.sh; echo \"--- DEBUG: Contents of dist/ after env-config.js generation ---\"; ls -la dist/; node esbuild.config.js; echo \"--- DEBUG: Contents of dist/ after esbuild.config.js execution ---\"; ls -la dist/; echo \"--- DEBUG: First 10 lines of bundle.js (if it exists) ---\"; if [ -f dist/bundle.js ]; then head -n 10 dist/bundle.js; else echo \"dist/bundle.js not found!\"; fi; npm run tailwind:build; cp index.html dist/index.html; cp _redirects dist/_redirects'",
+    "start:dev": "npm run build && firebase emulators:start --only hosting",
+    "tailwind:build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --minify",
+    "tailwind:watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/Makaveli1000/weebo-dog/issues"
-  },
-  "homepage": "https://github.com/Makaveli1000/weebo-dog#readme",
   "dependencies": {
-    "firebase": "^12.4.0",
-    "qrcode.js": "^0.0.1"
+    "firebase": "^10.12.2"
   },
   "devDependencies": {
-    "esbuild": "^0.27.0",
-    "tailwindcss": "^3.0.0"
+    "esbuild": "^0.21.5",
+    "tailwindcss": "^3.4.4"
   }
 }
