--- a/netlify.toml
+++ b/netlify.toml
@@ -1,24 +1,22 @@
 # netlify.toml
 
 [build]
-  # CRITICAL FIX: Simply run npm install and your comprehensive npm run build script.
   command = "npm install && npm run build"
-  
-  # Publish from the dist directory, which your npm run build script populates.
-  publish = "dist" 
+  publish = "dist"
 
-  # --- START DIAGNOSTIC: TEMPORARY ENVIRONMENT VARIABLES ---
-  # THIS SECTION IS FOR DIAGNOSIS ONLY.
-  # If your repository is PUBLIC, REMOVE THESE AFTER DIAGNOSIS.
-  FIREBASE_API_KEY = "AIzaSyDbt0ITM9G4LOZTlXuAGGvuO80uazFpZSs"
-  FIREBASE_APP_ID = "1:735791748207:web:74fd6412684db238b6e99a"
-  FIREBASE_AUTH_DOMAIN = "sntlmoexclusivesportsgrid.firebaseapp.com"
-  FIREBASE_MEASUREMENT_ID = "G-T8RJPDPL4G"
-  FIREBASE_MESSAGING_SENDER_ID = "735791748207"
-  FIREBASE_PROJECT_ID = "sntlmoexclusivesportsgrid"
-  FIREBASE_STORAGE_BUCKET = "sntlmoexclusivesportsgrid.firebasestorage.app"
-  GEMINI_API_KEY = "AIzaSyDbt0ITM9G4LOZTlXuAGGvuO80uazFpZSs" # Ensure this is your correct Gemini key
-  # --- END DIAGNOSTIC: TEMPORARY ENVIRONMENT VARIABLES ---
+  # This is the correct TOML syntax for defining environment variables
+  # that are available to your build script.
+  # Values defined here (if marked as sensitive in Netlify UI)
+  # should be properly passed to the build context.
+  [build.environment] # <--- This line defines a table for environment variables
+    FIREBASE_API_KEY = "AIzaSyDbt0ITM9G4LOZTlXuAGGvuO80uazFpZSs" # YOUR ACTUAL KEY
+    FIREBASE_APP_ID = "1:735791748207:web:74fd6412684db238b6e99a" # YOUR ACTUAL APP ID
+    FIREBASE_AUTH_DOMAIN = "sntlmoexclusivesportsgrid.firebaseapp.com"
+    FIREBASE_MEASUREMENT_ID = "G-T8RJPDPL4G"
+    FIREBASE_MESSAGING_SENDER_ID = "735791748207"
+    FIREBASE_PROJECT_ID = "sntlmoexclusivesportsgrid"
+    FIREBASE_STORAGE_BUCKET = "sntlmoexclusivesportsgrid.firebasestorage.app"
+    GEMINI_API_KEY = "AIzaSyDbt0ITM9G4LOZTlXuAGGvuO80uazFpZSs" # YOUR ACTUAL GEMINI KEY
 
 [[redirects]]
   from = "/*"
