--- a/netlify.toml
+++ b/netlify.toml
@@ -1,24 +1,18 @@
 # netlify.toml
 
-[build]
-  command = "npm install && npm run build"
-  publish = "dist"
+    [build]
+      command = "npm install && npm run build" # Clean command again
+      publish = "dist"
 
-  # This is the correct TOML syntax for defining environment variables
-  # that are available to your build script.
-  # Values defined here (if marked as sensitive in Netlify UI)
-  # should be properly passed to the build context.
-  [build.environment] # <--- This line defines a table for environment variables
-    FIREBASE_API_KEY = "AIzaSyDbt0ITM9G4LOZTlXuAGGvuO80uazFpZSs" # YOUR ACTUAL KEY
-    FIREBASE_APP_ID = "1:735791748207:web:74fd6412684db238b6e99a" # YOUR ACTUAL APP ID
-    FIREBASE_AUTH_DOMAIN = "sntlmoexclusivesportsgrid.firebaseapp.com"
-    FIREBASE_MEASUREMENT_ID = "G-T8RJPDPL4G"
-    FIREBASE_MESSAGING_SENDER_ID = "735791748207"
-    FIREBASE_PROJECT_ID = "sntlmoexclusivesportsgrid"
-    FIREBASE_STORAGE_BUCKET = "sntlmoexclusivesportsgrid.firebasestorage.app"
-    GEMINI_API_KEY = "AIzaSyDbt0ITM9G4LOZTlXuAGGvuO80uazFpZSs" # YOUR ACTUAL GEMINI KEY
+      # This section is now the proper place for environment variables,
+      # whether sensitive or not.
+      # Netlify UI environment variables usually take precedence over this,
+      # but we'll try to ensure they are available to your script via the UI.
+      # We will rely on the Netlify UI variables to be set correctly.
+      # If this still doesn't work, we'll need to use [build.environment] to override Netlify UI.
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+    [[redirects]]
+      from = "/*"
+      to = "/index.html"
+      status = 200
+   
