--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,10 @@
 # netlify.toml
 
-[build]
-  # Inject environment variables directly into the command for this build.
-  # This should bypass Netlify's build.environment redaction/issue and ensure config.
-  command = "FIREBASE_API_KEY='AIzaSyCmw-PBDUuktgyW7vZHEfsHYVzcoKIBkGk' FIREBASE_APP_ID='1:735791748207:web:74fd6412684db238b6e99a' FIREBASE_AUTH_DOMAIN='sntlmoexclusivesportsgrid.firebaseapp.com' FIREBASE_MEASUREMENT_ID='G-T8RJPDPL4G' FIREBASE_MESSAGING_SENDER_ID='735791748207' FIREBASE_PROJECT_ID='sntlmoexclusivesportsgrid' FIREBASE_STORAGE_BUCKET='sntlmoexclusivesportsgrid.firebasestorage.app' GEMINI_API_KEY='AIzaSyDbt0ITM9G4LOZTlXuAGGvuO80uazFpZSs' npm install && npm run build"
-  
-  publish = "dist" 
+    [build]
+      command = "npm install && npm run build"
+      publish = "dist"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+    [[redirects]]
+      from = "/*"
+      to = "/index.html"
+      status = 200
