--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,8 @@
   command = "npm run build"
   publish = "dist" 
   
-  functions = "netlify/functions"
+  # FIX: The value for 'functions' must also be a quoted string.
+  functions = "netlify/functions" # <<<--- THIS IS THE FIX
   
   environment = {
     SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
