FIX: Deploying corrected build script and config

--- a/functions/package.json
+++ b/functions/package.json
@@ -1,13 +1,12 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "scripts": { // This is the ONLY scripts object
+  "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
-    // The build/start/tailwind scripts for the web app do NOT belong here
   },
   "engines": {
     "node": "22"
