FIX: Added function dependency installation to build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,19 @@
 [build]
-  # 1. Generate keys, 2. Build the app
-  command = "chmod +x build-env.sh && ./build-env.sh && npm run build"
+  # 1. Give permissions, 2. Run your key script, 3. Install function deps, 4. Build the site
+  command = "chmod +x build-env.sh && ./build-env.sh && npm install --prefix functions && npm run build"
   
-  # This MUST be dist because that's where your audio and HTML are
+  # This is where your website files (HTML, JS, Audio) live
   publish = "dist"
   
-  # Point this to the folder that caused the JSON error
+  # This points to your backend folder
   functions = "functions"
 
 [build.environment]
   SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
+
+[[plugins]]
+  # This is the "magic" line that fixes the dependency error you just saw
+  package = "@netlify/plugin-functions-install-core"
 
 [[redirects]]
   from = "/*"
