--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,11 @@
   SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
 
 [[headers]]
+  for = "/bundle.js"
+  [headers.values]
+    Content-Type = "application/javascript"
+
+[[headers]]
   for = "/*.js"
   [headers.values]
     Content-Type = "application/javascript"
