--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,6 @@
   },
   "functions": [
     {
-      "source": "functions",
       "codebase": "default",
       "disallowLegacyRuntimeConfig": true,
       "ignore": [
@@ -16,7 +15,7 @@
         "firebase-debug.log",
         "firebase-debug.*.log",
         "*.local"
-      ]
+      ] // <-- THIS COMMA WAS REMOVED
     }
   ],
   "hosting": {
