--- a/netlify.toml
+++ b/netlify.toml
@@ -7,11 +7,6 @@
   SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
 
 [[headers]]
-  for = "/bundle.js"
-  [headers.values]
-    Content-Type = "application/javascript"
-
-[[headers]]
   for = "/*.js"
   [headers.values]
     Content-Type = "application/javascript"
@@ -20,3 +15,6 @@
   for = "/*.map"
   [headers.values]
     Content-Type = "application/json"
+
+[context.production]
+  environment = { NETLIFY_USE_DIRECTORY_INDEX = "false" }
