--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "node": "22"
       },
       "scripts": {
-        "build": "sh build-env.sh && node esbuild.config.js && npm run tailwind:build && mkdir -p dist/audio && cp thunder.mp3 dist/audio/thunder.mp3 && cp ambient.mp3 dist/audio/ambient.mp3",
+        "build": "sh build-env.sh && node esbuild.config.js && npm run tailwind:build && mkdir -p dist/audio && cp audio/thunder.mp3 dist/audio/thunder.mp3 && cp audio/ambient.mp3 dist/audio/ambient.mp3",
         "tailwind:build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --minify",
         "tailwind:watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,4 +23,4 @@
         "tailwindcss": "^3.4.19"
       }
     }
-   
+    
