--- a/netlify.toml
+++ b/netlify.toml
@@ -18,4 +18,7 @@
 
     [context.production]
       environment = { NETLIFY_USE_DIRECTORY_INDEX = "false" }
-    
+
+    [[plugins]]
+    package = "@netlify/plugin-functions-install-core"
+
